# routes/index.js
@@ -17,6 +17,7 @@ const slider = require('./slider.routes');
 const contain = require('./contain.routes');
 const user = require('./user.routes');
 const membership = require('./membership.routes');
+const wishlist = require('./wishlist.routes');
 const router = express.Router();
 
 router.use('/admin',admin);
@@ -37,5 +38,6 @@ router.use('/slider', slider);
 router.use('/contain', contain);
 router.use('/user', user);
 router.use('/membership', membership);
+router.use('/wishlist', wishlist);
 
 module.exports = router;
